# XLOpenCV

app/: build.gradle
app/src/androidTest/java/com/xl/opencv/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FaceTracker.cpp  FaceTracker.h  native-lib.cpp
app/src/main/java/com/xl/opencv/: FaceTracker.kt  MainActivity.kt  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/test/java/com/xl/opencv/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
